--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,17 @@
 <resources>
     <string name="app_name">FPU Calculator</string>
     <string name="action_settings">Settings</string>
-    <string name="foodname_label">Name</string>
-    <string name="favorite_label">Favorite</string>
-    <string name="calories_label">Calories per 100g</string>
+    <string name="foodname_label">Name:</string>
+    <string name="favorite_label">Favorite:</string>
+    <string name="calories_label">Calories per 100g:</string>
     <string name="calories_unit">kcal</string>
-    <string name="carbs_label">Carbs per 100g</string>
+    <string name="carbs_label">Carbs per 100g:</string>
     <string name="carbs_unit">g</string>
     <string name="button_save">Save</string>
-    <string name="button_cancel">Save</string>
-    <string name="empty_not_saved">Food not saved because data are missing.</string>
-    <string name="newfood_error_carbsorcalbelowzero">Calories as well as carbs must not be negative for food</string>
-    <string name="newfood_error_calslargercarbs1">Cannot save new food</string>
-    <string name="newfood_error_calslargercarbs2">: Calories from carbs (1g ~ 4kcal) of</string>
-    <string name="newfood_error_calslargercarbs3">larger than total calories of</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="newfood_error_datamissing">Data are missing.</string>
+    <string name="newfood_error_carbsorcalbelowzero">Calories as well as carbs must not be negative for food\u0020</string>
+    <string name="newfood_error_calslargercarbs1">Cannot save new food\u0020</string>
+    <string name="newfood_error_calslargercarbs2">: Calories from carbs (1g ~ 4kcal) of\u0020</string>
+    <string name="newfood_error_calslargercarbs3">\u0020larger than total calories of\u0020</string>
 </resources>
