--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -15,4 +15,5 @@
     <string name="newfood_error_calslargercarbs1">Kann Essen\u0020</string>
     <string name="newfood_error_calslargercarbs2">\u0020nicht speichern: Kalorien aus Kohlenhydraten (1g ~ 4kcal) ist mit\u0020</string>
     <string name="newfood_error_calslargercarbs3">\u0020größer als die Gesamtkalorien von\u0020</string>
+    <string name="hint_nofoodfound">Noch kein Essen vorhanden</string>
 </resources>
