WIP commit - MealCalc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="comment_label">Comment</string>
     <string name="newmeal_nofoodselected">No food selected</string>
     <string name="newmeal_customamount">Custom amount</string>
+    <string name="unit_gram">g</string>
 </resources>
