--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -28,4 +28,5 @@
     <string name="comment_label">Bemerkung</string>
     <string name="newmeal_nofoodselected">Kein Essen ausgewählt</string>
     <string name="newmeal_customamount">Eigene Menge</string>
+    <string name="unit_gram">g</string>
 </resources>
