--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -29,4 +29,15 @@
     <string name="newmeal_nofoodselected">Kein Essen ausgewählt</string>
     <string name="newmeal_customamount">Eigene Menge</string>
     <string name="unit_gram">g</string>
+    <string name="title_activity_preferences">Einstellungen</string>
+    <string name="foodcalories_label">Kalorien</string>
+    <string name="foodcarbs_label">Kohlenhydrate</string>
+    <string name="fpu_unit">FPE</string>
+    <string name="foodfpu_label">Fett-Protein-Einheiten</string>
+    <string name="ecarbs_label">Verlängerte Kohlenhydrate</string>
+    <string name="absorptiontime_label">Absorptionszeit</string>
+    <string name="absorptiontime_unit">h</string>
+    <string name="title_activity_newfood">Neues Essen</string>
+    <string name="title_activity_newmeal">Neue Mahlzeit</string>
+    <string name="title_activity_calcmeal">Mahlzeit-Werte</string>
 </resources>
