--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -40,4 +40,6 @@
     <string name="title_activity_newfood">Neues Essen</string>
     <string name="title_activity_newmeal">Neue Mahlzeit</string>
     <string name="title_activity_calcmeal">Mahlzeit-Werte</string>
+    <string name="err_absorptionschemefilenotfound">Absorptionsschema-Datei nicht gefunden</string>
+    <string name="meal">Gesamtmahlzeit</string>
 </resources>
