--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -42,4 +42,5 @@
     <string name="title_activity_calcmeal">Mahlzeit-Werte</string>
     <string name="err_absorptionschemefilenotfound">Absorptionsschema-Datei nicht gefunden</string>
     <string name="meal">Gesamtmahlzeit</string>
+    <string name="foodlist">Essensliste</string>
 </resources>
