--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,9 @@
     <string name="meal">Total Meal</string>
     <string name="foodlist">Food List</string>
     <string name="title_activity_editfood">Edit Food</string>
+    <string name="backup_complete">Backup Complete</string>
+    <string name="backup_failed">Backup failed</string>
+    <string name="action_exportdb">Export database</string>
+    <string name="backup_cannotwrite">Cannot write to</string>
+    <string name="action_importdb">Import database</string>
 </resources>
