--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="action_exportdb">Export database</string>
     <string name="backup_cannotwrite">Cannot write to</string>
     <string name="action_importdb">Import database</string>
+    <string name="absorptionscheme_info_text"><![CDATA[The absorption time is defined based on the total FPUs, e.g.: 0-1 FPU - 3 hours; 1-2 FPUs - 4 hours; 2-3 FPUs - 5 hours; 3-4 FPUs - 6 hours; >4 FPUs - 8 hours  The fpu value is commercially rounded to 0 digits, i.e. 2.49 will be rounded to 2, 2.50 will be rounded to 3.  If the fpu value is beyond the last value, the time of the last value is used.]]></string>
 </resources>
