Refactored + WIP commit edit absorptionscheme

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -52,4 +52,7 @@
     <string name="absorptionscheme_info_text"><![CDATA[Die Absorptionszeit wird nach folgender Logik entsprechend der FPE ausgewählt, z.B.:  Absorptionsschema: 0-1 FPU - 3 Stunden; 1-2 FPE - 4 Stunden; 2-3 FPE - 5 Stunden; 3-4 FPE - 6 Stunden; >4 FPE - 8 Stunden  Die FPE werden kaufmännisch gerundet, d.h. 2,49 wird auf 2 gerundet, 2.50 auf 3.  Liegen die FPE oberhalb des letzten Eintrags, wird die Absorptionszeit des letzten Eintrags genutzt.]]></string>
     <string name="button_add">Hinzufügen</string>
     <string name="button_remove">Löschen</string>
+    <string name="action_editabsorptionscheme">Absorptionsschema bearbeiten</string>
+    <string name="button_reset">Zurücksetzen</string>
+    <string name="absorptionblock_cannotdelete">Kann Absorptionsblock nicht löschen</string>
 </resources>
