--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -55,4 +55,5 @@
     <string name="action_editabsorptionscheme">Absorptionsschema bearbeiten</string>
     <string name="button_reset">Zurücksetzen</string>
     <string name="absorptionblock_cannotdelete">Kann Absorptionsblock nicht löschen</string>
+    <string name="err_absorptionblock_error">Absorptionsblock passt nicht in existierendes Schema</string>
 </resources>
