Refactored Database export - fixed minor issue with notifications

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -40,7 +40,7 @@
     <string name="err_absorptionschemefilenotfound">Absorptionsschema-Datei nicht gefunden</string>
     <string name="meal">Gesamtmahlzeit</string>
     <string name="title_activity_editfood">Essen bearbeiten</string>
-    <string name="backup_complete">Backup komplett</string>
+    <string name="backup_complete">Backup erfolgreich auf</string>
     <string name="backup_failed">Backup fehlgeschlagen</string>
     <string name="action_exportdb">Exportiere Datenbank</string>
     <string name="backup_cannotwrite">Kann nicht speichern auf</string>
