--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,8 @@
     <string name="err_directory_not_created">Directory not created:</string>
     <string name="err_filename_missing">Missing file name for database export</string>
     <string name="err_database_not_found">Database not found</string>
+    <string name="app_descripton">Calculates carbs, extended carbs (aka. eCarbs or Fake Carbs) and the matching absorption time for individual food or a whole meal.</string>
+    <string name="app_documentation_link">Documentation on rueth.info</string>
+    <string name="app_github_link">Source code on github.com/UlricusR/FPU_Calculator</string>
+    <string name="about_dialog">About</string>
 </resources>
